static/form.css
#paper {
    width: auto;
    aspect-ratio: 268/359;
    margin-left: auto;
    margin-right: auto;
    margin-top: 20px;
    margin-bottom: 64px;
    max-width: 60vw;
    background: white;
    padding: 3em;
    filter: drop-shadow(0 0 25px rgba(0,0,0,0.25));
    -webkit-filter: drop-shadow(0 0 25px rgba(0,0,0,0.25));
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: center center;
    mask-size: 100% 100%;
    -webkit-mask-size: 100% 100%;
    mask-size: 100% 100%;
    -webkit-mask-repeat: no-repeat;
    mask-repeat: no-repeat;
    -webkit-mask-position: center;
    mask-position: center;
    transition: all 0.5s ease,
                transform 2s cubic-bezier(0.5, -0.5, 0.5, 1.5);
}

@media (min-width: 1000px) {
    #paper {
        max-width: 27vw;
    }
}

#message {
    margin-top: 1em;
    width: 100%;
    height: 60%;
    resize: none;
    overflow-wrap: break-word;
    white-space: normal;
    overflow-y: auto;
}

#timeNumber, #timeUnit {
    text-decoration: dotted underline;
    appearance: textfield;
    -moz-appearance: textfield;
    margin: 0;
    padding: 0;
    border: none;
    display: inline-block;
    vertical-align: middle;
    font: inherit;
    color: var(--text-color);
    width: 5.5em;
    max-width: 40vw;
    text-align: center;
    background: transparent;
}

#controls {
    margin-left: auto;
    margin-right: auto;
    width: fit-content;
    background-color: white;
    padding: 1.5em;
    border-radius: 1em;
    align-items: center;
    justify-content: center;
    transition: transform 0.5s cubic-bezier(0.5, -0.5, 0.5, 1.5),
                opacity 0.5s ease;
}

#time {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 1.5em;
}

#controls > span {
    display: block;
    word-wrap: break-word;
}

#submit {
    margin: 0;
    background: none;
    border: none;
    background-color: var(--text-color);
    font: inherit;
    color: white;
    font-size: 1.5em;
    padding: 0.5em 2em;
    border-radius: 0.5em;
    margin: 4px 0;
}

#pin {
    cursor: pointer;
}

#durationSwitch {
    background: none;
    border: none;
    cursor: pointer;
    font: inherit;
    color: var(--text-color);
    padding: 0;
    text-decoration: underline;
}

#durationSwitchText {
    font-size: 1rem;
}

#recent {
    display: flex;
    flex-direction: row;
    z-index: -1;
    margin-top: 20px;
    min-height: 40px;
}

.recent-paper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 6em;
    text-decoration: none;
    color: inherit;
    cursor: pointer;
    margin-left: 2em;
    transition: transform 1s ease;
}

.recent-paper img {
    width: 100%;
}

.recent-paper p {
    font-size: 0.5em;
    margin: 0;
}

@keyframes blink {
    0% {
      opacity: 1;
    }
    50% {
      opacity: 0.5;
    }
    100% {
      opacity: 1;
    }
}

.recent-paper span {
    color: #d1f8ff;
    transition: opacity 0.5s ease;
}

.recent-paper.arrived span {
    animation: blink 1s infinite;
}

